--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -43,67 +43,67 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	## Galleries
 --------------------------------------------------------------*/
 
-@import "custom";
+@import "helpers/functions";
+@import "custom/custom";
 @import "~bootstrap/scss/bootstrap";
-@import "variables-site/variables-site";
 @import "mixins/mixins-master";
-
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-@import "normalize";
 
+@import "normalize";
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-@import "typography/typography";
 
+@import "typography/typography";
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
-@import "elements/elements";
 
+@import "elements/elements";
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
-@import "forms/forms";
 
+@import "forms/forms";
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
-@import "navigation/navigation";
 
+@import "navigation/navigation";
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
-@import "modules/accessibility";
 
+@import "modules/accessibility";
 /*--------------------------------------------------------------
 # Alignments
 --------------------------------------------------------------*/
-@import "modules/alignments";
 
+@import "modules/alignments";
 /*--------------------------------------------------------------
 # Clearings
 --------------------------------------------------------------*/
-@import "modules/clearings";
 
+@import "modules/clearings";
 /*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
-@import "site/secondary/widgets";
 
+@import "site/secondary/widgets";
 /*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
-@import "site/site";
 
+@import "site/site";
 /*--------------------------------------------------------------
 # Infinite scroll
 --------------------------------------------------------------*/
-@import "modules/infinite-scroll";
 
+@import "modules/infinite-scroll";
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
+
 @import "media/media";
