--- a/src/sass/custom/_colors.scss
+++ b/src/sass/custom/_colors.scss
@@ -27,6 +27,8 @@ $gray-dark: lighten($gray-base, 20%) !default; // #333
 $gray: lighten($gray-base, 33.5%) !default; // #555
 $gray-light: lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter: lighten($gray-base, 93.5%) !default; // #eee
+$white: #f4f4f4;
+$black: #333;
 
 /**
 * Branding Overrides
