chore(*):tidy up file layout

--- a/style.css
+++ b/style.css
@@ -7426,7 +7426,8 @@ html {
 
 body {
   background: #fff;
-  /* Fallback for when there is no custom background color defined. */ }
+  /* Fallback for when there is no custom background color defined. */
+  overflow-x: hidden; }
 
 hr {
   background-color: #ccc;
