--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,90 +20,13 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
-/*--------------------------------------------------------------
->>> TABLE OF CONTENTS:
-----------------------------------------------------------------
-# Normalize
-# Typography
-# Elements
-# Forms
-# Navigation
-	## Links
-	## Menus
-# Accessibility
-# Alignments
-# Clearings
-# Widgets
-# Content
-	## Posts and pages
-	## Comments
-# Infinite scroll
-# Media
-	## Captions
-	## Galleries
---------------------------------------------------------------*/
 
 @import "helpers/functions";
 @import "custom/custom";
 @import "~bootstrap/scss/bootstrap";
-@import "mixins/mixins-master";
-/*--------------------------------------------------------------
-# Normalize
---------------------------------------------------------------*/
-
-@import "normalize";
-/*--------------------------------------------------------------
-# Typography
---------------------------------------------------------------*/
-
-@import "typography/typography";
-/*--------------------------------------------------------------
-# Elements
---------------------------------------------------------------*/
-
-@import "elements/elements";
-/*--------------------------------------------------------------
-# Forms
---------------------------------------------------------------*/
-
-@import "forms/forms";
-/*--------------------------------------------------------------
-# Navigation
---------------------------------------------------------------*/
-
-@import "navigation/navigation";
-/*--------------------------------------------------------------
-# Accessibility
---------------------------------------------------------------*/
-
-@import "modules/accessibility";
-/*--------------------------------------------------------------
-# Alignments
---------------------------------------------------------------*/
-
-@import "modules/alignments";
-/*--------------------------------------------------------------
-# Clearings
---------------------------------------------------------------*/
-
-@import "modules/clearings";
-/*--------------------------------------------------------------
-# Widgets
---------------------------------------------------------------*/
-
-@import "site/secondary/widgets";
-/*--------------------------------------------------------------
-# Content
---------------------------------------------------------------*/
-
-@import "site/site";
-/*--------------------------------------------------------------
-# Infinite scroll
---------------------------------------------------------------*/
-
-@import "modules/infinite-scroll";
-/*--------------------------------------------------------------
-# Media
---------------------------------------------------------------*/
-
+@import "mixins/mixins";
+@import "base/base";
+@import "layout/layout";
+@import "modules/modules";
+@import "state/state";
 @import "media/media";
