chore(sections):restructure

--- a/src/sass/modules/_cards.scss
+++ b/src/sass/modules/_cards.scss
@@ -1,4 +1,7 @@
-.info-card {
-    padding: 100px;
-    color: $white;
+.card {
+    &.info{
+        color: $white;
+        height: 300px;
+
+    }    
 }
