feat(master): added multi typed slider support

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,10 +20,9 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
-
 @import "helpers/functions";
 @import "custom/custom";
-@import "libs/libs";
+@import "lib/lib";
 @import "mixins/mixins";
 @import "base/base";
 @import "layout/layout";
