--- a/src/scss/custom/_colors.scss
+++ b/src/scss/custom/_colors.scss
@@ -23,11 +23,12 @@ $gray-dark: lighten($gray-base, 20%) !default; // #333
 $gray: lighten($gray-base, 33.5%) !default; // #555
 $gray-light: lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter: lighten($gray-base, 93.5%) !default; // #eee
-$white: #f4f4f4;
+$white: #fffdfd;
 $black: #333;
+
 /**
 * Branding Overrides
-* @see https: //sass-lang.com/documentation/file.SASS_REFERENCE.html#maps
+* @see https://sass-lang.com/documentation/file.SASS_REFERENCE.html#maps
 */
 
 $theme-colors: ( light-green: #c1d82f, light-brown: #6d4601, light-blue: #3caec3, dark-blue: #00576d, orange: #d66b32, green: #aec248, purple: #83509b, success: #5cb85c, info: #5bc0de, warning: #f0ad4e, danger: #d9534f, white: #f1f1f1);
