--- a/src/scss/helpers/_functions.scss
+++ b/src/scss/helpers/_functions.scss
@@ -1,3 +1,6 @@
+/**
+* This is used to map the theme colors
+*/
 @function custom-color($key) {
     @if map-has-key($theme-colors, $key) {
         @return map-get($theme-colors, $key);
