--- a/assets/style.css
+++ b/assets/style.css
@@ -77,6 +77,24 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     background: #fffdfd;
     padding: 0 40px; }
 
+.site-main {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 900px; }
+
+#sidebar {
+  max-width: 380px;
+  margin: 0 auto; }
+
+.fixed-nav {
+  position: absolute !important;
+  z-index: 1;
+  right: 0;
+  margin-top: 4em; }
+
+.send-to-back {
+  z-index: 0; }
+
 /*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
