--- a/src/scss/custom/_classes.scss
+++ b/src/scss/custom/_classes.scss
@@ -53,3 +53,26 @@
         padding: 0 40px;
     }
 }
+
+.site-main{
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 900px;
+}
+
+#sidebar {
+    max-width: 380px;
+    margin: 0 auto;
+}
+
+
+.fixed-nav {
+    position: absolute !important;
+    z-index: 1;
+    right: 0;
+    margin-top: 4em;
+}
+
+.send-to-back{
+    z-index: 0;
+}
