feat(master): moving blog to use intersection

--- a/src/scss/custom/_classes.scss
+++ b/src/scss/custom/_classes.scss
@@ -66,12 +66,12 @@
 }
 
 
-.fixed-nav {
-    position: absolute !important;
-    z-index: 1;
-    right: 0;
-    margin-top: 4em;
-}
+// .fixed-nav {
+//     position: absolute !important;
+//     z-index: 1;
+//     right: 0;
+//     margin-top: 4em;
+// }
 
 .send-to-back{
     z-index: 0;
