--- a/src/scss/custom/_classes.scss
+++ b/src/scss/custom/_classes.scss
@@ -16,6 +16,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    max-width: 300px;
+    padding: 50px;
     min-width: 0;
     word-wrap: break-word;
     background-color: $black;
@@ -32,23 +34,22 @@
     padding-top: 15px;
     .inner{
         border:1px solid $black;
+        height: 50px;
     }
     p{
         max-width: 600px;
-        margin: 0 auto 5px;
         color: #808080;
         font-style: italic;
-        font-size: 16px;
         line-height: 1.5em;
     }
     h1{
+        position: relative;
         font-size: $font__size * 1.3;
         line-height: $font__size * 1.3;
         font-weight: 600;
-        margin-top: -20px;
+        margin-top: -10px;
         text-transform: uppercase;
         color: lighten($black, 5);
-        display: inline-block;
         background: $white;
         padding: 0 40px;
     }
