--- a/src/scss/custom/_classes.scss
+++ b/src/scss/custom/_classes.scss
@@ -13,20 +13,26 @@
 }
 
 .carousel-caption-overlay{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    max-width: 300px;
-    padding: 50px;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: $black;
-    opacity: 0.8;
+    background-color: #333;
     background-clip: border-box;
     border: 1px solid rgba(51, 51, 51, 0.125);
     border-radius: 0.25rem;
+    position: absolute;
+    opacity: 0.5;
+    display: flex;
+    flex-direction: column;
+    padding: 5050px;
+    overflow: hidden
 }
 
+.carousel-item{
+    background-color: $white !important;
+}
+.carousel-caption{
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+}
 .section-title {
     text-align: center;
     margin: 0 auto 80px;
@@ -58,7 +64,7 @@
 .site-main{
     margin-right: auto;
     margin-left: auto;
-    max-width: 900px;
+    max-width: 1025px;
 }
 
 #sidebar {
@@ -66,14 +72,39 @@
     margin: 0 auto;
 }
 
-
-// .fixed-nav {
-//     position: absolute !important;
-//     z-index: 1;
-//     right: 0;
-//     margin-top: 4em;
+/* MORE THAN 75 */
+// body {
+//     background-color: skyBlue !important;
 // }
 
-.send-to-back{
-    z-index: 0;
-}
+/* LESS THAN 75 */
+// @media (max-width: 74.9em) {
+//     body {
+//         background-color: pink !important;
+        
+//     }
+// }
+
+// /* LESS THAN 62 */
+// @media (max-width: 61.9em) {
+//     body {
+//         background-color: blue !important;
+//     }
+// }
+
+// /* LESS THAN 48 */
+// @media (max-width: 47.9em) {
+//     body {
+//         background-color: green !important;
+//     }
+// }
+
+// /* LESS THAN 34 */
+// @media (max-width: 33.9em) {
+//     body {
+//         background-color: red !important;
+//     }
+//     .controls-wrapper{
+//         margin-left: calc(33%);
+//     }
+// }
