--- a/assets/style.css
+++ b/assets/style.css
@@ -115,7 +115,94 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
   margin: 0 auto; }
 
 /* MORE THAN 75 */
+body {
+  background-color: skyBlue !important; }
+
 /* LESS THAN 75 */
+@media (max-width: 74.9em) {
+  body {
+    background-color: pink !important; } }
+
+/* LESS THAN 62 */
+@media (max-width: 61.9em) {
+  body {
+    background-color: blue !important; } }
+
+/* LESS THAN 48 */
+@media (max-width: 47.9em) {
+  body {
+    background-color: green !important; } }
+
+/* LESS THAN 34 */
+@media (max-width: 33.9em) {
+  body {
+    background-color: red !important; }
+  .controls-wrapper {
+    margin-left: calc(33%); } }
+
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+  background: #333; }
+  .hovereffect .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    padding: 50px 20px; }
+  .hovereffect img {
+    display: block;
+    position: relative;
+    max-width: none;
+    width: calc(100% + 20px);
+    transition: opacity 0.35s, transform 0.35s;
+    transform: translate3d(-10px, 0, 0);
+    backface-visibility: hidden; }
+  .hovereffect:hover img {
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+    transform: translate3d(0, 0, 0); }
+  .hovereffect h2 {
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    overflow: hidden;
+    padding: 0.5em 0;
+    background-color: transparent; }
+    .hovereffect h2:after {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: #fff;
+      content: '';
+      transition: transform 0.35s;
+      transform: translate3d(-100%, 0, 0); }
+  .hovereffect:hover h2:after {
+    transform: translate3d(0, 0, 0); }
+  .hovereffect a,
+  .hovereffect p {
+    color: #FFF;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    transition: opacity 0.35s, transform 0.35s;
+    transform: translate3d(100%, 0, 0); }
+  .hovereffect:hover a,
+  .hovereffect:hover p {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    transform: translate3d(0, 0, 0); }
+
 /*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
