--- a/src/scss/custom/_classes.scss
+++ b/src/scss/custom/_classes.scss
@@ -73,38 +73,121 @@
 }
 
 /* MORE THAN 75 */
-// body {
-//     background-color: skyBlue !important;
-// }
+body {
+    background-color: skyBlue !important;
+}
 
 /* LESS THAN 75 */
-// @media (max-width: 74.9em) {
-//     body {
-//         background-color: pink !important;
+@media (max-width: 74.9em) {
+    body {
+        background-color: pink !important;
         
-//     }
-// }
+    }
+}
 
-// /* LESS THAN 62 */
-// @media (max-width: 61.9em) {
-//     body {
-//         background-color: blue !important;
-//     }
-// }
+/* LESS THAN 62 */
+@media (max-width: 61.9em) {
+    body {
+        background-color: blue !important;
+    }
+}
 
-// /* LESS THAN 48 */
-// @media (max-width: 47.9em) {
-//     body {
-//         background-color: green !important;
-//     }
-// }
+/* LESS THAN 48 */
+@media (max-width: 47.9em) {
+    body {
+        background-color: green !important;
+    }
+}
 
-// /* LESS THAN 34 */
-// @media (max-width: 33.9em) {
-//     body {
-//         background-color: red !important;
-//     }
-//     .controls-wrapper{
-//         margin-left: calc(33%);
-//     }
-// }
+/* LESS THAN 34 */
+@media (max-width: 33.9em) {
+    body {
+        background-color: red !important;
+    }
+    .controls-wrapper{
+        margin-left: calc(33%);
+    }
+}
+
+.hovereffect {
+    width: 100%;
+    height: 100%;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: default;
+    background: #333;
+
+    .overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        overflow: hidden;
+        top: 0;
+        left: 0;
+        padding: 50px 20px;
+    }
+
+    img {
+        display: block;
+        position: relative;
+        max-width: none;
+        width: calc(100% + 20px);
+        transition: opacity 0.35s, transform 0.35s;
+        transform: translate3d(-10px, 0, 0);
+        backface-visibility: hidden;
+    }
+
+    &:hover img {
+        opacity: 0.4;
+        filter: alpha(opacity=40);
+        transform: translate3d(0, 0, 0);
+    }
+
+    h2 {
+        text-transform: uppercase;
+        color: #fff;
+        text-align: center;
+        position: relative;
+        font-size: 17px;
+        overflow: hidden;
+        padding: 0.5em 0;
+        background-color: transparent;
+
+        &:after {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: #fff;
+            content: '';
+            transition: transform 0.35s;
+            transform: translate3d(-100%, 0, 0);
+        }
+    }
+
+    &:hover h2:after {
+        transform: translate3d(0, 0, 0);
+    }
+
+    a,
+    p {
+        color: #FFF;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        transition: opacity 0.35s, transform 0.35s;
+        transform: translate3d(100%, 0, 0);
+    }
+
+    &:hover {
+
+        a,
+        p {
+            opacity: 1;
+            filter: alpha(opacity=100);
+            transform: translate3d(0, 0, 0);
+        }
+    }
+}
