--- a/assets/style.css
+++ b/assets/style.css
@@ -7969,6 +7969,15 @@ a {
   a:hover, a:active {
     outline: 0; }
 
+.nav-links {
+  width: 100%;
+  margin: 0 auto; }
+  .nav-links div {
+    border: 1px red solid;
+    display: flex;
+    justify-content: center;
+    padding: 0.5em; }
+
 .main-navigation {
   clear: both;
   display: block;
