--- a/src/scss/custom/_classes.scss
+++ b/src/scss/custom/_classes.scss
@@ -18,12 +18,14 @@
     border: 1px solid rgba(51, 51, 51, 0.125);
     border-radius: 0.25rem;
     position: absolute;
-    opacity: 0.5;
+    opacity: 0.4;
     display: flex;
     flex-direction: column;
-    padding: 5050px;
-    overflow: hidden
+    padding: 100%;
+    overflow: hidden;
+    left: 0;
 }
+
 
 .carousel-item{
     background-color: $white !important;
