feat(design): added menu transition and styling

--- a/src/scss/custom/_custom.scss
+++ b/src/scss/custom/_custom.scss
@@ -1,6 +1,9 @@
-@import "colors";
-@import "typography";
+@import "functions";
+@import "variables/variables";
+@import "mixins/mixins";
+@import "elements/elements";
 @import "columns";
 @import "tns-slider";
 @import "classes";
-@import "sidebar";
+
+@import "sections/sections";
