--- a/assets/style.css
+++ b/assets/style.css
@@ -17,8 +17,6 @@ Use it to make something cool, have fun, and share what you've learned with othe
 the-parenting-place-2018 is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 /**
 * This is used to map the theme colors
@@ -33,6 +31,77 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /***
 * Site Fonts
 */
+/* Desktops and laptops ----------- */
+@media only screen and (min-width: 1224px) {
+  .nav-menu-wrapper {
+    width: 100%;
+    height: auto;
+    position: fixed;
+    z-index: 1; }
+    .nav-menu-wrapper nav {
+      padding: 0;
+      height: 90px; }
+      .nav-menu-wrapper nav .nav-link {
+        color: #fffdfd;
+        font-size: 1.1em; } }
+
+.nav-menu-wrapper .navbar {
+  transition: background 0.4s linear; }
+
+.nav-menu-wrapper .past-banner {
+  background-color: #333; }
+
+nav ul {
+  margin-left: 3em; }
+
+nav .menu-item {
+  padding: 1em; }
+  nav .menu-item a:focus, nav .menu-item a:hover, nav .menu-item a:active {
+    border-bottom: 3px solid #00576d; }
+
+#sidebar {
+  z-index: 999;
+  background: #c1d82f;
+  color: #fff;
+  transition: all 1s; }
+
+.carousel {
+  margin-bottom: 4rem; }
+
+.carousel-item {
+  height: 32rem;
+  background-color: #777; }
+  .carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 32rem; }
+
+.carousel-caption-wrapper {
+  display: flex;
+  justify-content: center; }
+  .carousel-caption-wrapper .carousel-caption {
+    margin-top: 2em;
+    color: #fffdfd;
+    text-align: center;
+    border-radius: 5px;
+    padding: 1em;
+    z-index: 10; }
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4; }
+  .featurette-heading {
+    font-size: 50px; } }
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem; } }
+
 .tns-outer {
   max-width: 100%; }
   .tns-outer .card {
@@ -45,14 +114,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 .controls-wrapper {
   position: relative;
   display: flex;
-  margin-left: calc(42.5%); }
+  justify-content: center;
+  width: 100%; }
   .controls-wrapper .playbutton-wrapper button {
     display: none; }
   .controls-wrapper .controls {
-    padding: 0 70px; }
+    display: flex; }
     .controls-wrapper .controls li {
-      position: absolute;
-      margin-top: 0px !important; }
+      margin: 1em 1.7em; }
 
 .shadow {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
@@ -98,7 +167,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
   .section-title h1 {
     position: relative;
     font-size: 1.3em;
-    line-height: 1.3em;
     font-weight: 600;
     margin-top: -10px;
     text-transform: uppercase;
@@ -204,11 +272,10 @@ body {
     filter: alpha(opacity=100);
     transform: translate3d(0, 0, 0); }
 
-#sidebar {
-  z-index: 999;
-  background: #c1d82f;
-  color: #fff;
-  transition: all 1s; }
+/* Desktops and laptops ----------- */
+@media only screen and (min-width: 1224px) {
+  .image-slider-wrapper {
+    margin-top: -50px; } }
 
 /*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
@@ -7757,21 +7824,21 @@ template {
   margin-left: auto;
   margin-right: auto; }
 
-.clear:before,
-.clear:after,
-.entry-content:before,
-.entry-content:after,
-.comment-content:before,
-.comment-content:after,
-.site-header:before,
-.site-header:after,
-.site-content:before,
-.site-content:after,
-.site-footer:before,
-.site-footer:after {
-  content: "";
-  display: table;
-  table-layout: fixed; }
+.clear:before::after,
+.clear:after::after,
+.entry-content:before::after,
+.entry-content:after::after,
+.comment-content:before::after,
+.comment-content:after::after,
+.site-header:before::after,
+.site-header:after::after,
+.site-content:before::after,
+.site-content:after::after,
+.site-footer:before::after,
+.site-footer:after::after {
+  display: block;
+  clear: both;
+  content: ""; }
 
 .clear:after,
 .entry-content:after,
@@ -7984,558 +8051,6 @@ img:not(.tns-lazy-img),
   padding-left: 5px;
   content: '\25BA';
   font-size: 0.8em; }
-
-.card.info {
-  color: #333;
-  height: 300px; }
-
-/*THE CAROUSEL
--------------------------------------------------- */
-/* Carousel base class */
-.carousel {
-  margin-bottom: 4rem; }
-
-/* Since positioning the image, we need to help out the caption */
-/* Declare heights because of positioning of img element */
-.carousel-item {
-  height: 32rem;
-  background-color: #777; }
-  .carousel-item > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    height: 32rem; }
-
-/* MARKETING CONTENT
--------------------------------------------------- */
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
-  margin-bottom: 1.5rem;
-  text-align: center; }
-
-.marketing h2 {
-  font-weight: 400; }
-
-.marketing .col-lg-4 p {
-  margin-right: 0.75rem;
-  margin-left: 0.75rem; }
-
-/* Featurettes
-------------------------- */
-.featurette-divider {
-  margin: 5rem 0;
-  /* Space out the Bootstrap <hr> more */ }
-
-/* Thin out the marketing headings */
-.featurette-heading {
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: -0.05rem; }
-
-.carousel-caption-wrapper {
-  display: flex;
-  justify-content: center; }
-  .carousel-caption-wrapper .carousel-caption {
-    margin-top: 2em;
-    color: #fffdfd;
-    text-align: center;
-    border-radius: 5px;
-    padding: 1em;
-    z-index: 10; }
-
-/* RESPONSIVE CSS
--------------------------------------------------- */
-@media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4; }
-  .featurette-heading {
-    font-size: 50px; } }
-
-@media (min-width: 62em) {
-  .featurette-heading {
-    margin-top: 7rem; } }
-
-site-footer {
-  background: #fff; }
-
-ul, ol {
-  margin: 0 0 1.5em 3em; }
-
-ul {
-  list-style: disc; }
-
-ol {
-  list-style: decimal; }
-
-li > ul,
-li > ol {
-  margin-bottom: 0;
-  margin-left: 1.5em; }
-
-dt {
-  font-weight: bold; }
-
-dd {
-  margin: 0 1.5em 1.5em; }
-
-table {
-  margin: 0 0 1.5em;
-  width: 100%; }
-
-a {
-  color: #333;
-  padding: 1em !important; }
-  a:visited {
-    color: #00576d; }
-  a:hover, a:focus, a:active {
-    color: #0d0d0d; }
-  a:focus {
-    outline: thin dotted; }
-  a:hover, a:active {
-    outline: 0; }
-
-.nav-links {
-  width: 100%;
-  margin: 0 auto; }
-  .nav-links div {
-    border: 1px red solid;
-    display: flex;
-    justify-content: center;
-    padding: 0.5em; }
-
-nav a:focus, nav a:hover, nav a:active {
-  border-bottom: 3px solid #00576d; }
-
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  border: 1px solid;
-  border-color: #ccc #ccc #bbb;
-  border-radius: 3px;
-  background: #e6e6e6;
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 12px;
-  font-size: 0.75rem;
-  line-height: 1;
-  padding: .6em 1em .4em; }
-  button:hover,
-  input[type="button"]:hover,
-  input[type="reset"]:hover,
-  input[type="submit"]:hover {
-    border-color: #ccc #bbb #aaa; }
-  button:active, button:focus,
-  input[type="button"]:active,
-  input[type="button"]:focus,
-  input[type="reset"]:active,
-  input[type="reset"]:focus,
-  input[type="submit"]:active,
-  input[type="submit"]:focus {
-    border-color: #aaa #bbb #bbb; }
-
-input[type="text"],
-input[type="email"],
-input[type="url"],
-input[type="password"],
-input[type="search"],
-input[type="number"],
-input[type="tel"],
-input[type="range"],
-input[type="date"],
-input[type="month"],
-input[type="week"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="color"],
-textarea {
-  color: #666;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  padding: 3px; }
-  input[type="text"]:focus,
-  input[type="email"]:focus,
-  input[type="url"]:focus,
-  input[type="password"]:focus,
-  input[type="search"]:focus,
-  input[type="number"]:focus,
-  input[type="tel"]:focus,
-  input[type="range"]:focus,
-  input[type="date"]:focus,
-  input[type="month"]:focus,
-  input[type="week"]:focus,
-  input[type="time"]:focus,
-  input[type="datetime"]:focus,
-  input[type="datetime-local"]:focus,
-  input[type="color"]:focus,
-  textarea:focus {
-    color: #111; }
-
-select {
-  border: 1px solid #ccc; }
-
-textarea {
-  width: 100%; }
-
-body,
-button,
-input,
-select,
-optgroup,
-textarea {
-  color: #404040;
-  font-family: sans-serif;
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 1.5; }
-
-h1, h2, h3, h4, h5, h6 {
-  clear: both; }
-
-p {
-  margin-bottom: 1.5em; }
-
-dfn, cite, em, i {
-  font-style: italic; }
-
-blockquote {
-  margin: 0 1.5em; }
-
-address {
-  margin: 0 0 1.5em; }
-
-pre {
-  background: #eee;
-  font-family: "Courier 10 Pitch", Courier, monospace;
-  font-size: 15px;
-  font-size: 0.9375rem;
-  line-height: 1.6;
-  margin-bottom: 1.6em;
-  max-width: 100%;
-  overflow: auto;
-  padding: 1.6em; }
-
-code, kbd, tt, var {
-  font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-  font-size: 15px;
-  font-size: 0.9375rem; }
-
-abbr, acronym {
-  border-bottom: 1px dotted #666;
-  cursor: help; }
-
-mark, ins {
-  background: #fff9c0;
-  text-decoration: none; }
-
-big {
-  font-size: 125%; }
-
-.nav-toggle-handle {
-  position: fixed;
-  transition: left 0.25s;
-  left: 0;
-  top: 0;
-  z-index: 100;
-  padding: 10px;
-  color: #fff;
-  background-color: #af23ff;
-  cursor: pointer; }
-
-.nav-toggle-handle:before {
-  display: none;
-  padding-right: 5px;
-  content: '\25C4';
-  font-size: 0.8em; }
-
-.nav-toggle-handle:after {
-  padding-left: 5px;
-  content: '\25BA';
-  font-size: 0.8em; }
-
-.img-1 {
-  background: #D6D65B;
-  background: #d6d65c; }
-
-.img-2 {
-  background: #5BD6AD;
-  background: #5cd6ad; }
-
-.img-3 {
-  background: #5B99D6;
-  background: #5c99d6; }
-
-.img-4 {
-  background: #D65BC1;
-  background: #d65cc2; }
-
-.img-5 {
-  background: #70D65B;
-  background: #70d65c; }
-
-.img-6 {
-  background: #D65B5B;
-  background: #d65c5c; }
-
-.img-7 {
-  background: #D6995B;
-  background: #d6995c; }
-
-.img-8 {
-  background: #705BD6;
-  background: #705cd6; }
-
-.customize-tools {
-  position: relative; }
-
-.thumbnails {
-  margin: 20px 0;
-  text-align: center; }
-
-.thumbnails li {
-  display: inline-block;
-  cursor: pointer;
-  border: 5px solid #fff; }
-
-.thumbnails [aria-selected="true"] {
-  background: none;
-  border-color: #000; }
-
-.thumbnails img {
-  width: 50px;
-  vertical-align: bottom; }
-
-.controls {
-  text-align: center; }
-
-.controls li {
-  display: block;
-  position: absolute;
-  top: 50%;
-  height: 60px;
-  line-height: 60px;
-  margin-top: -30px;
-  padding: 0 15px;
-  cursor: pointer;
-  transition: background 0.3s; }
-
-.controls li img {
-  display: inline-block;
-  vertical-align: middle; }
-
-.controls .prev {
-  left: 0; }
-
-.controls .next {
-  right: 0; }
-
-.controls li:hover {
-  background: #f2f2f2; }
-
-.tns-controls {
-  text-align: center;
-  margin-bottom: 10px; }
-
-.tns-controls [aria-controls] {
-  font-size: 15px;
-  margin: 0 5px;
-  padding: 0 1em;
-  height: 2.5em;
-  color: #000;
-  background: #66CCFF;
-  border-radius: 3px;
-  border: 0; }
-
-.lt-ie9 .tns-controls > [aria-controls] {
-  line-height: 2.5em; }
-
-[data-action] {
-  display: block;
-  margin: 10px auto;
-  font-size: 17px;
-  min-width: 3em;
-  text-align: center;
-  background: transparent;
-  border: 0; }
-
-.tns-controls [disabled] {
-  color: #999999;
-  background: #B3B3B3;
-  cursor: not-allowed !important; }
-
-.tns-nav {
-  text-align: center;
-  margin: 10px 0; }
-
-.tns-nav > [aria-controls] {
-  width: 9px;
-  height: 9px;
-  padding: 0;
-  margin: 0 5px;
-  border-radius: 50%;
-  background: #ddd;
-  border: 0; }
-
-.tns-nav > [aria-selected="true"] {
-  background: #999; }
-
-.playbutton-wrapper {
-  text-align: center; }
-
-.playbutton-wrapper button {
-  height: 34px;
-  padding: 0 10px;
-  font-size: 14px;
-  background: #fff;
-  border-radius: 3px;
-  border: 1px solid #ccc;
-  cursor: pointer; }
-
-.wrapper {
-  padding: 0 5em; }
-
-.suite-container .title,
-.suite-container .subtitle,
-.suite-container li {
-  padding: 5px 10px; }
-
-.suite-container li {
-  font-size: 12px;
-  line-height: 1.4;
-  background: #f5f5f5; }
-
-.suite-container .title {
-  font-size: 14px;
-  font-weight: bold;
-  background: #8acac6;
-  text-transform: capitalize; }
-
-.suite-container .subtitle {
-  font-size: 13px;
-  font-weight: bold;
-  background: #dedede;
-  text-transform: capitalize; }
-
-.suite-container .fail {
-  background: #FFADE2; }
-
-[class*="vertical"] .img {
-  padding: 30px 0; }
-
-[class*="vertical"] .img:before {
-  content: '';
-  display: inline-block;
-  width: 1px;
-  margin-right: -1px;
-  height: 100%;
-  vertical-align: middle; }
-
-[class*="vertical"] .img a {
-  display: inline-block;
-  padding: 0; }
-
-[class*="vertical"] .img-1 {
-  height: 137px; }
-
-[class*="vertical"] .img-2 {
-  height: 122px; }
-
-[class*="vertical"] .img-3 {
-  height: 143px; }
-
-[class*="vertical"] .img-4 {
-  height: 325px; }
-
-[class*="vertical"] .img-5 {
-  height: 140px; }
-
-[class*="vertical"] .img-6 {
-  height: 119px; }
-
-[class*="vertical"] .img-7 {
-  height: 223px; }
-
-[class*="vertical"] .img-8 {
-  height: 164px; }
-
-/*[class*="vertical"] p { display: none; }*/
-/*.animation .img-1 { height: 137px; }
-    .animation .img-2 { height: 122px; }
-    .animation .img-3 { height: 143px; }
-    .animation .img-4 { height: 325px; }
-    .animation .img-5 { height: 140px; }
-    .animation .img-6 { height: 119px; }
-    .animation .img-7 { height: 223px; }
-    .animation .img-8 { height: 164px; }*/
-/* reset prism */
-pre[class*="language-"] {
-  margin: 0; }
-
-/* test results */
-.test-results {
-  line-height: 1.4;
-  padding: 20px 10%;
-  background-color: #f2f2f2; }
-
-/* go to */
-.goto-controls {
-  margin-bottom: 10px;
-  text-align: center; }
-
-.goto-controls input,
-.goto-controls .button {
-  display: inline-block;
-  font-size: 14px;
-  height: 2.6em;
-  line-height: 2.6;
-  padding: 0 1em;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  vertical-align: middle; }
-
-.goto-controls input {
-  border: 1px solid #ccc; }
-
-.goto-controls .button {
-  min-width: 4em;
-  border: none;
-  color: #fff;
-  background-color: #333;
-  cursor: pointer; }
-
-.customize-tools [hidden] {
-  display: none; }
-
-img {
-  max-width: 100%; }
-
-img:not(.tns-lazy-img),
-.lazyload img {
-  height: auto; }
-
-.img {
-  font-size: 100px;
-  font-weight: 100;
-  color: #fff;
-  text-align: center; }
-
-.img a {
-  display: block;
-  padding: 22% 0;
-  color: inherit;
-  text-decoration: none; }
-
-p {
-  margin: 0;
-  padding: 0.8em 0;
-  line-height: 1.4;
-  font-weight: 300;
-  text-align: center; }
 
 .page-content .wp-smiley,
 .entry-content .wp-smiley,
