--- a/src/scss/custom/_classes.scss
+++ b/src/scss/custom/_classes.scss
@@ -1,5 +1,3 @@
-@import "../mixins/mixins";
-
 .shadow{
     @include box-shadow(1);
 }
@@ -52,8 +50,7 @@
     }
     h1{
         position: relative;
-        font-size: $font__size * 1.3;
-        line-height: $font__size * 1.3;
+        @include font-scale(1.3);
         font-weight: 600;
         margin-top: -10px;
         text-transform: uppercase;
