chore(master): tidied scss folder

--- a/src/scss/custom/elements/_sidebar.scss
+++ b/src/scss/custom/elements/_sidebar.scss
@@ -3,4 +3,6 @@
     background: custom-color('light-green');
     color: #fff;
     transition: all 1s;
+    max-width: 380px;
+    margin: 0 auto;
 }
