--- a/src/scss/custom/elements/_carousel.scss
+++ b/src/scss/custom/elements/_carousel.scss
@@ -1,6 +1,22 @@
 .carousel {
     margin-bottom: 4rem;
+    margin-top: -10px;
 }
+
+.carousel-caption-overlay {
+    background-color: #333;
+    background-clip: border-box;
+    border: 1px solid rgba(51, 51, 51, 0.125);
+    border-radius: 0.25rem;
+    position: absolute;
+    opacity: 0.3;
+    display: flex;
+    flex-direction: column;
+    padding: 100%;
+    overflow: hidden;
+    left: 0;
+}
+
 .carousel-item {
     height: 32rem;
     background-color: #777;
@@ -18,7 +34,6 @@
     display: flex;
     justify-content: center;
 
-
     .carousel-caption {
         margin-top: 2em;
         color: $white;
@@ -26,6 +41,9 @@
         border-radius: 5px;
         padding: 1em;
         z-index: 10;
+        display: flex;
+        flex-direction: column;
+        max-width: 300px;
     }
 }
 
