--- a/src/scss/custom/elements/nav/_past-banner.scss
+++ b/src/scss/custom/elements/nav/_past-banner.scss
@@ -1,8 +1,16 @@
 .nav-menu-wrapper{
-    .navbar{
-        transition: background 0.4s linear;
+    .main-menu-wrapper{
+      .navbar{
+            transition: background 0.4s linear;
+        }
+        .past-banner{
+            background-color: $black;
+        }
     }
-    .past-banner{
-        background-color: $black;
+
+    .sub-menu-wrapper{
+        .past-banner{
+            display: none !important;
+        }
     }
 }
