--- a/assets/style.css
+++ b/assets/style.css
@@ -217,10 +217,11 @@ object {
         font-size: 1.1em; } }
 
 .nav-menu-wrapper .main-menu-wrapper .navbar {
-  transition: background 0.4s linear; }
+  transition: background 0.5s linear; }
 
 .nav-menu-wrapper .main-menu-wrapper .past-banner {
-  background-color: #333; }
+  background: #333;
+  border-bottom: 10px solid #00576d; }
 
 .nav-menu-wrapper .sub-menu-wrapper .past-banner {
   display: none !important; }
@@ -233,12 +234,14 @@ nav .menu-item {
   nav .menu-item a:focus, nav .menu-item a:hover, nav .menu-item a:active {
     border-bottom: 3px solid #00576d; }
 
-.sub-menu-wrapper {
-  background-color: #00576d;
+.sub-menu-wrapper nav {
+  background: linear-gradient(#00576d, #004f63);
   width: 100%;
   display: flex;
-  height: 2.5em;
+  height: auto;
   justify-content: center; }
+  .sub-menu-wrapper nav .menu-item {
+    padding: 0; }
 
 .tns-outer {
   max-width: 100%; }
@@ -280,8 +283,6 @@ nav .menu-item {
   border-radius: 0.25rem;
   position: absolute;
   opacity: 0.3;
-  display: flex;
-  flex-direction: column;
   padding: 100%;
   overflow: hidden;
   left: 0; }
@@ -8036,9 +8037,6 @@ p {
   line-height: 1.4;
   font-weight: 300;
   text-align: center; }
-
-a:focus {
-  outline: 1px solid red; }
 
 img {
   max-width: 100%; }
