--- a/src/scss/custom/elements/nav/_sub-nav.scss
+++ b/src/scss/custom/elements/nav/_sub-nav.scss
@@ -1,7 +1,13 @@
-.sub-menu-wrapper{
-    background-color: custom-color('dark-blue');
-    width: 100%;
-    display: flex;
-    height: 2.5em;
-    justify-content: center;
+.sub-menu-wrapper {
+    $color: custom-color('dark-blue');
+    nav {
+        background: linear-gradient($color, darken($color, 2));
+        width: 100%;
+        display: flex;
+        height: auto;
+        justify-content: center;
+        .menu-item{
+            padding: 0;
+        }
+    }
 }
