--- a/src/scss/custom/elements/nav/_wrapper.scss
+++ b/src/scss/custom/elements/nav/_wrapper.scss
@@ -1,3 +1,8 @@
+.nav-menu-wrapper{
+    * {
+        color: $white !important;
+    }
+}
 /* Desktops and laptops ----------- */
 @media only screen and (min-width : 1224px) {
     .nav-menu-wrapper {
@@ -5,6 +10,7 @@
         height: auto;
         position: fixed;
         z-index: map-get($z-index, 5);
+        
         .main-menu-wrapper{
             height: 100px;
             nav{
@@ -25,4 +31,19 @@
             }
         }
     }
+}
+
+@media (max-width: 74.9em) {
+     .main-menu-wrapper {
+         .navbar {
+             transition: background 0.5s linear;
+             background: $black;
+             border-bottom: 10px solid custom-color('dark-blue');
+         }
+
+         .nav-link{
+             color: $white;
+         }
+     }
+
 }
