--- a/src/scss/custom/elements/_carousel.scss
+++ b/src/scss/custom/elements/_carousel.scss
@@ -82,6 +82,11 @@
     }
 }
 
+@media (min-width: 63em){
+    #banner{
+        margin-top: 8em;
+    }
+}
 @media (min-width: 72em) {
 
     #banner{
