--- a/src/scss/custom/index.scss
+++ b/src/scss/custom/index.scss
@@ -4,5 +4,6 @@
 @import "layout/index";
 @import "media/index";
 @import "elements/index";
+@import "lib-overrides/index";
 @import "posts/index";
 @import "sections/index";
