--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 /*!
 Theme Name: The Parenting Place 2018
 Theme URI: 
@@ -21,6 +21,10 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 /***
 * Site Fonts
 */
+body > * {
+  font-family: "Nunito", sans-serif;
+  font-size: 1.2em; }
+
 /**
 * This is used to map the theme colors
 * @example
@@ -277,6 +281,23 @@ nav .menu-item {
   justify-content: center; }
   .sub-menu-wrapper nav .menu-item {
     padding: 0; }
+
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
+  .pagination a:hover {
+    text-decoration: none;
+    color: #999999; }
+  .pagination > *:first-child {
+    border-top-left-radius: .25rem;
+    border-bottom-left-radius: .25rem; }
+  .pagination > * {
+    background-color: #fffdfd;
+    padding: 1em; }
+  .pagination > *:last-child {
+    border-top-right-radius: .25rem;
+    border-bottom-right-radius: .25rem; }
 
 .sb-search {
   width: 100%;
