made animation mixins available

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@ License URI: LICENSE
 Text Domain: the-parenting-place-2018
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
-@import "lib/index";
+@import "lib/animate/animate";
 @import "custom/index";
+@import "lib/index";
 @import "base/index";
