--- a/src/scss/custom/elements/_sidebar.scss
+++ b/src/scss/custom/elements/_sidebar.scss
@@ -1,8 +1,16 @@
-#sidebar {
-    z-index: 999;
-    background: custom-color('light-green');
-    color: #fff;
-    transition: all 1s;
-    max-width: 380px;
-    margin: 0 auto;
+#sidebar-content {
+    padding: 1em;
+    section > ul > li{
+        border-bottom: 1px solid lighten($black, 70);
+        padding: 0.5rem;
+        border-radius: 3px;
+        text-align: center;
+        > span > a, > a {
+            text-decoration: none;
+        }
+        
+        &:hover{
+            background-color: lighten(custom-color('light-green'), 40);
+        }
+    }
 }
