added center text support

--- a/src/scss/custom/elements/nav/_sub-nav.scss
+++ b/src/scss/custom/elements/nav/_sub-nav.scss
@@ -1,9 +1,10 @@
+// this can be made visible by changing display to flex
 .sub-menu-wrapper {
     $color: custom-color('dark-blue');
     nav {
         background: linear-gradient($color, darken($color, 2));
         width: 100%;
-        display: flex;
+        display: none; //flex
         height: auto;
         justify-content: center;
         .menu-item{
